updates, updates everywhere

--- a/package.json
+++ b/package.json
@@ -13,34 +13,35 @@
   "private": true,
   "dependencies": {
     "@angular/common": "*",
-    "@angular/compiler": "*",
-    "@angular/core": "*",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
     "@angular/forms": "*",
     "@angular/http": "*",
     "@angular/platform-browser": "*",
     "@angular/platform-browser-dynamic": "*",
     "@angular/router": "*",
     "core-js": "*",
-    "rxjs": "*",
-    "snapsvg": "^0.4.0",
     "d3": "^4.4.3",
+    "rxjs": "*",
+    "snapsvg": "^0.5.1",
     "ts-helpers": "*",
     "zone.js": "*"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "^2.2.30",
-    "angular-cli": "1.0.0-beta.15",
-    "codelyzer": "~0.0.26",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "codelyzer": "~3.0.0-beta.4",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "3.2.0",
+    "karma": "1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.5",
-    "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "2.0.2"
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "5.1.1",
+    "ts-node": "3.0.2",
+    "tslint": "4.5.1",
+    "typescript": "^2.2.1"
   }
 }
